--- a/src/pages/pending/pending.html
+++ b/src/pages/pending/pending.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the Login page.
+  Generated template for the Pending page.
 
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,12 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>login</ion-title>
+    <ion-title text-center>Pending</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-	<button ion-button (click)="login()">Sign In</button>
+
 </ion-content>
