--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,7 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Manage" tabIcon="cash"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Send" tabIcon="send"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Pending" tabIcon="filing"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="More" tabIcon="menu"></ion-tab>
 </ion-tabs>
