--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,15 +4,18 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>login</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
 
 <ion-content padding>
-	<button ion-button (click)="login()">Sign In</button>
+	<div class="input-group">
+		<ion-icon name="person"></ion-icon> 
+		<ion-input type="text" placeholder="Username"></ion-input>
+	</div>
+	<div class="input-group">
+		<ion-icon name="lock"></ion-icon> 
+		<ion-input type="text" placeholder="Password"></ion-input>
+	</div>
+	<button ion-button block (click)="login()">Sign In</button>
+	<div class="seperator">
+		or sign in with
+	</div>
 </ion-content>
