--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,6 +2,6 @@
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Manage" tabIcon="cash"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Send" tabIcon="send"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Pending" tabIcon="filing"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Transfers" tabIcon="filing"></ion-tab>
   <ion-tab [root]="tab5Root" tabTitle="More" tabIcon="menu"></ion-tab>
 </ion-tabs>
