--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,17 +5,22 @@
   Ionic pages and navigation.
 -->
 
-<ion-content padding>
+<ion-content padding [fullscreen]="true"
+			 style="background: url('assets/images/login-background.jpg') no-repeat center; background-size: cover">
+	<div class="logo">
+		<ion-img src="assets/images/logo.png" [width]="160" [height]="85"></ion-img>
+	</div>
 	<div class="input-group">
-		<ion-icon name="person"></ion-icon> 
+		<ion-icon name="person"></ion-icon>
 		<ion-input type="text" placeholder="Username"></ion-input>
 	</div>
 	<div class="input-group">
-		<ion-icon name="lock"></ion-icon> 
+		<ion-icon name="lock"></ion-icon>
 		<ion-input type="text" placeholder="Password"></ion-input>
 	</div>
 	<button ion-button block (click)="login()">Sign In</button>
 	<div class="seperator">
 		or sign in with
 	</div>
+	<button ion-button block (click)="facebook()">Facebook Login</button>
 </ion-content>
