--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,13 @@
 
-<ion-content>
-  <wallet-slide>
+<ion-content [ngClass]="{'no-wallets': wallets.length == 0}">
+  <a class="sign-out" (tap)="signOut()">Sign Out</a>
+  <wallet-slide (swipe)="changeWallet($event)" *ngIf="wallets.length > 0">
   </wallet-slide>
+  <div class="vertical-container" *ngIf="wallets.length == 0">
+    <div class="vertical-align">
+      <p>
+        Start by adding some money below!
+      </p>
+    </div>
+  </div>
 </ion-content>
