--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,13 +1,16 @@
 
 <ion-content [ngClass]="{'no-wallets': wallets.length == 0}">
-  <a class="sign-out" (tap)="signOut()">Sign Out</a>
-  <wallet-slide (swipe)="changeWallet($event)" *ngIf="wallets.length > 0">
-  </wallet-slide>
+  <a class="sign-out" (tap)="logout()">Sign Out</a>
+
+  <wallet-slide
+          *ngIf="wallets.length > 0"
+          [wallets]="wallets"
+  ></wallet-slide>
+
   <div class="vertical-container" *ngIf="wallets.length == 0">
-    <div class="vertical-align">
-      <p>
-        Start by adding some money below!
-      </p>
+    <div class="vertical-align no-wallets-message">
+      <h2>Looks like you have no money!</h2>
+      <button ion-button round><ion-icon name="add"></ion-icon>&nbsp; Add Money</button>
     </div>
   </div>
 </ion-content>
