--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,15 +7,17 @@
 	<form (onSubmit)="login(form)" #form="ngForm">
 		<div class="input-group">
 			<ion-icon name="person"></ion-icon>
-			<ion-input type="email"
-					   placeholder="Email"
-					   required
+			<ion-input
+					type="email"
+					placeholder="Email"
+					required
 			></ion-input>
 		</div>
 		<div class="input-group">
 			<ion-icon name="lock"></ion-icon>
-			<ion-input type="text"
-					   placeholder="Password"
+			<ion-input
+					type="text"
+					placeholder="Password"
 			></ion-input>
 		</div>
 		<button ion-button block type="submit">Sign In</button>
