--- a/src/pages/manage/manage.html
+++ b/src/pages/manage/manage.html
@@ -87,8 +87,11 @@
 
       <ion-card>
         <ion-card-content>
-            <ion-label text-center stacked>Withdraw with</ion-label>
-            <!-- PayPal Logo --><table border="0" cellpadding="10" cellspacing="0" align="center"><tr><td align="center"></td></tr><tr><td align="center"><a href="https://www.paypal.com/webapps/mpp/paypal-popup" title="How PayPal Works" onclick="javascript:window.open('https://www.paypal.com/webapps/mpp/paypal-popup','WIPaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1060, height=700'); return false;"><img src="https://www.paypalobjects.com/webstatic/mktg/logo/AM_mc_vs_dc_ae.jpg" border="0" alt="PayPal Acceptance Mark"></a></td></tr></table><!-- PayPal Logo -->
+            <ion-label text-center stacked>Withdraw with {{message}}</ion-label>
+            <!-- PayPal Logo -->
+          <table border="0" cellpadding="10" cellspacing="0" align="center"><tr><td align="center"></td></tr><tr><td align="center">
+              <img (click)="withdraw()" src="https://www.paypalobjects.com/webstatic/mktg/logo/AM_mc_vs_dc_ae.jpg" border="0" alt="PayPal Acceptance Mark">
+          </td></tr></table><!-- PayPal Logo -->
         </ion-card-content>
       </ion-card>
     </ion-list>
