Front end of withdraw initiated.

--- a/src/pages/manage/manage.html
+++ b/src/pages/manage/manage.html
@@ -87,7 +87,7 @@
 
       <ion-card>
         <ion-card-content>
-            <ion-label text-center stacked>Withdraw with {{message}}</ion-label>
+            <ion-label text-center stacked>Withdraw with</ion-label>
             <!-- PayPal Logo -->
           <table border="0" cellpadding="10" cellspacing="0" align="center"><tr><td align="center"></td></tr><tr><td align="center">
               <img (click)="withdraw()" src="https://www.paypalobjects.com/webstatic/mktg/logo/AM_mc_vs_dc_ae.jpg" border="0" alt="PayPal Acceptance Mark">
