--- a/src/pages/transfers/transfers.html
+++ b/src/pages/transfers/transfers.html
@@ -34,6 +34,7 @@
             <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
           </ion-avatar>
           <h2>FName LName</h2>
+          <button ion-button (click)="showTransferModal()">Details</button>
           <p item-right color="in">+10.45$</p>
         </ion-item>
       </ion-item-group>
