--- a/src/pages/manage/manage.html
+++ b/src/pages/manage/manage.html
@@ -33,15 +33,19 @@
           <!-- Add card content here! -->
           <ion-item>
             <ion-label stacked>Amount</ion-label>
-            <ion-input type="number" placeholder="0.00" step="0.01"></ion-input>
+            <ion-input [(ngModel)]="addMoney.amount"
+                       type="number"
+                       placeholder="{{ addMoney.decimalPlaces }}"
+                       step="0.01"
+                       min="0"
+            ></ion-input>
           </ion-item>
-
           <ion-item>
             <ion-label stacked>Select Currency</ion-label>
-            <ion-select [(ngModel)]="currencies">
-              <ion-option value="CAD">CAD (Canadian Dollar)</ion-option>
-              <ion-option value="USD">USD (US Dollar)</ion-option>
-              <ion-option value="EUR">EUR (Euro)</ion-option>
+            <ion-select [(ngModel)]="addMoney.currency" (ionChange)="setDecimalPlaces()">
+              <ion-option *ngFor="let currency of currencies; let i = index" [value]="currency">
+                {{ currency.code }} - {{ currency.name }}
+              </ion-option>
             </ion-select>
           </ion-item>
 
