Created withdraw and deposit components

--- a/src/pages/transfers/transfers.html
+++ b/src/pages/transfers/transfers.html
@@ -26,7 +26,7 @@
   </div>
 
   <div [ngSwitch]="action">
-    <ion-list *ngSwitchCase="'pending'">
+    <ion-list *ngSwitchCase="pending">
       <ion-item-group>
         <ion-item-divider color="light">January 13, 2016</ion-item-divider>
         <ion-item>
@@ -59,7 +59,7 @@
       </ion-item-group>
     </ion-list>
 
-    <ion-list *ngSwitchCase="'history'">
+    <ion-list *ngSwitchCase="history">
         <ion-item-group>
           <ion-item-divider color="light">January 09, 2016</ion-item-divider>
           <ion-item>
