OTP access login page done

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -31,4 +31,7 @@
   <button class="btn-signin" ion-button block icon-left (click)="showAuth('google')">
     Google
   </button>
+    <button class="btn-signin" ion-button block icon-left (click)="OTPlogin()">
+Forgot Password
+	  </button>
 </ion-content>
