--- a/src/pages/send-money/send-money.html
+++ b/src/pages/send-money/send-money.html
@@ -15,46 +15,64 @@
 
 <ion-content padding>
   <div>
+    <form (ngSubmit) = "send()" #f = "ngForm">
       <ion-card>
         <ion-card-content>
-          <!-- Add card content here! -->
-          <ion-item>
-            <ion-label stacked>Amount</ion-label>
-            <ion-input type="number" placeholder="0.00" step="0.01"></ion-input>
-          </ion-item>
-
-          <ion-item>
-            <ion-label stacked>Select Currency</ion-label>
-            <ion-select [(ngModel)]="currencies">
-              <ion-option value="CAD">CAD (Canadian Dollar)</ion-option>
-              <ion-option value="USD">USD (US Dollar)</ion-option>
-              <ion-option value="EUR">EUR (Euro)</ion-option>
-            </ion-select>
-          </ion-item>
-
-          <ion-item>
-            <ion-label stacked>Select Recipient</ion-label>
-            <ion-select [(ngModel)]="recipients">
-              <ion-option value="johndoe">John Doe</ion-option>
-              <ion-option value="janedoe">Jane Doe</ion-option>
-              <ion-option value="trump">Donald Trump (therealdonaldtrump@gmail.com)</ion-option>
-            </ion-select>
-          </ion-item>
-        </ion-card-content>
-
-      </ion-card>
-
-      <ion-card>
-        <ion-card-content>
-          <ion-item>
-            <ion-label stacked>Message</ion-label>
-            <ion-textarea rows="4" placeholder="Write a message (optional)." [(ngModel)]="msg"></ion-textarea>
-          </ion-item>
         </ion-card-content>
       </ion-card>
   </div>
+
+  <ion-card>
+    <ion-card-content>
+      <ion-item>
+        <ion-label stacked>Message</ion-label>
+        <ion-textarea rows="4" placeholder="Write a message (optional)." [(ngModel)]="msg"></ion-textarea>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+
+
   <div text-center>
     <button ion-button clear>Send</button>
   </div>
+  </form>
 
 </ion-content>
+
+<!--
+
+<ion-item>
+  <ion-label stacked>Amount</ion-label>
+  <ion-input type="number" placeholder="0.00" step="0.01"></ion-input>
+</ion-item>
+
+<ion-item>
+  <ion-label stacked>Select Currency</ion-label>
+  <ion-select [(ngModel)]="currencies">
+    <ion-option value="CAD">CAD (Canadian Dollar)</ion-option>
+    <ion-option value="USD">USD (US Dollar)</ion-option>
+    <ion-option value="EUR">EUR (Euro)</ion-option>
+  </ion-select>
+</ion-item>
+
+<ion-item>
+  <ion-label stacked>Select Recipient</ion-label>
+  <ion-select [(ngModel)]="recipients">
+    <ion-option value="johndoe">John Doe</ion-option>
+    <ion-option value="janedoe">Jane Doe</ion-option>
+    <ion-option value="trump">Donald Trump (therealdonaldtrump@gmail.com)</ion-option>
+  </ion-select>
+</ion-item>
+</ion-card-content>
+
+</ion-card>
+
+<ion-card>
+  <ion-card-content>
+    <ion-item>
+      <ion-label stacked>Message</ion-label>
+      <ion-textarea rows="4" placeholder="Write a message (optional)." [(ngModel)]="msg"></ion-textarea>
+    </ion-item>
+  </ion-card-content>
+</ion-card>
+-->
