--- a/src/pages/send-money/send-money.html
+++ b/src/pages/send-money/send-money.html
@@ -14,26 +14,49 @@
 
 
 <ion-content padding>
-  <div>
-    <form (ngSubmit) = "send()" #f = "ngForm">
-      <ion-card>
-        <ion-card-content>
-        </ion-card-content>
-      </ion-card>
-  </div>
+
+  <form #sendMoneyForm = "ngForm" (ngSubmit) = "send(sendMoneyForm)" >
+    <ion-card>
+      <ion-card-content>
+
+        <ion-item>
+          <ion-label stacked>Amount</ion-label>
+          <ion-input type="number" required [(ngModel)]="sendMoneyForm.amount" ngControl="amount" placeholder="0.00" step="0.01"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label stacked>Select Currency</ion-label>
+          <ion-select [(ngModel)]="sendMoneyForm.currency" ngControl="currency">
+            <ion-option value="CAD">CAD (Canadian Dollar)</ion-option>
+            <ion-option value="USD">USD (US Dollar)</ion-option>
+            <ion-option value="EUR">EUR (Euro)</ion-option>
+          </ion-select>
+        </ion-item>
+
+        <ion-item>
+          <ion-label stacked>Select Receiver</ion-label>
+          <ion-select [(ngModel)]="sendMoneyForm.receiver" ngControl="receiver">
+            <ion-option value="johndoe">John Doe</ion-option>
+            <ion-option value="janedoe">Jane Doe</ion-option>
+            <ion-option value="trump">Donald Trump (therealdonaldtrump@gmail.com)</ion-option>
+          </ion-select>
+        </ion-item>
+      </ion-card-content>
+    </ion-card>
+
 
   <ion-card>
     <ion-card-content>
       <ion-item>
         <ion-label stacked>Message</ion-label>
-        <ion-textarea rows="4" placeholder="Write a message (optional)." [(ngModel)]="msg"></ion-textarea>
+        <ion-textarea rows="4" [(ngModel)]="sendMoneyForm.message" ngControl="message" placeholder="Write a message (optional)." ></ion-textarea>
       </ion-item>
     </ion-card-content>
   </ion-card>
 
 
   <div text-center>
-    <button ion-button clear>Send</button>
+    <button ion-button type="submit" block>Send</button>
   </div>
   </form>
 
