--- a/src/pages/more/more.html
+++ b/src/pages/more/more.html
@@ -13,4 +13,32 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-card>
+    <ion-card-header>
+      General Options
+    </ion-card-header>
+
+    <ion-list>
+      <button ion-item>
+        <ion-icon name="contact" item-left></ion-icon>
+        Account Settings
+      </button>
+
+      <button ion-item>
+        <ion-icon name="contacts" item-left></ion-icon>
+        Manage Contacts
+      </button>
+
+      <button ion-item>
+        <ion-icon name="logo-usd" item-left></ion-icon>
+        Manage Currencies
+      </button>
+
+      <button ion-item>
+        <ion-icon name="log-out" item-left></ion-icon>
+        Sign out
+      </button>
+
+    </ion-list>
+  </ion-card>
 </ion-content>
