After many debugs, finally fixed change of page between more page and edit account page

--- a/src/pages/more/more.html
+++ b/src/pages/more/more.html
@@ -19,7 +19,7 @@
     </ion-card-header>
 
     <ion-list>
-      <button ion-item>
+      <button ion-item [navPush]="editAccountPage">
         <ion-icon name="contact" item-left></ion-icon>
         Account Settings
       </button>
