--- a/src/pages/send-money/send-money.html
+++ b/src/pages/send-money/send-money.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the Manage page.
 
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -15,7 +10,7 @@
 
 <ion-content padding>
 
-  <form [sendMoneyForm]="ngForm" (ngSubmit) = "send()" >
+  <form [formGroup]="submitMoneyForm" (ngSubmit)="send()"  >
     <ion-card>
       <ion-card-content>
 
