--- a/src/pages/send-money/send-money.html
+++ b/src/pages/send-money/send-money.html
@@ -16,7 +16,7 @@
 
         <ion-item>
           <ion-label stacked>Amount</ion-label>
-          <ion-input type="number" formControlName="amount" placeholder="0.00" step="0.01"></ion-input>
+          <ion-input type="number" formControlName="amount" placeholder="0.00" step="0.01" min="0"></ion-input>
         </ion-item>
 
         <ion-item>
