EP-6 #comment Send money front end is mostly finished. Waiting on contact feature.

--- a/src/pages/send-money/send-money.html
+++ b/src/pages/send-money/send-money.html
@@ -52,7 +52,7 @@
 
 
   <div text-center>
-    <button ion-button type="submit" block [disabled]="!sendMoneyForm.valid">Send</button>
+    <button ion-button type="submit" block [disabled]="!sendMoneyForm.valid || !validAmount">Send</button>
   </div>
   </form>
 
