--- a/src/pages/manage/manage.html
+++ b/src/pages/manage/manage.html
@@ -43,9 +43,14 @@
           <ion-item>
             <ion-label stacked>Select Currency</ion-label>
             <ion-select [(ngModel)]="addMoney.currency" (ionChange)="setDecimalPlaces()">
-              <ion-option *ngFor="let currency of currencies; let i = index" [value]="currency">
-                {{ currency.code }} - {{ currency.name }}
-              </ion-option>
+              <ng-container *ngFor="let currency of currencies">
+                <ion-option *ngIf="addMoney.currency.code==currency.code" [value]="addMoney.currency">
+                  {{addMoney.currency.code}} - {{addMoney.currency.name}}
+                </ion-option>
+                <ion-option *ngIf="addMoney.currency.code!=currency.code">
+                  {{currency.code}} - {{currency.name}}
+                </ion-option>
+              </ng-container>
             </ion-select>
           </ion-item>
 
@@ -58,7 +63,7 @@
           <ion-label text-center stacked>Add money with</ion-label>
         </ion-card-header>
         <ion-card-content>
-            <!-- PayPal Logo --><table border="0" cellpadding="10" cellspacing="0" align="center"><tr><td align="center"></td></tr><tr><td align="center"><a href="https://www.paypal.com/webapps/mpp/paypal-popup" title="How PayPal Works" onclick="javascript:window.open('https://www.paypal.com/webapps/mpp/paypal-popup','WIPaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1060, height=700'); return false;"><img src="https://www.paypalobjects.com/webstatic/mktg/logo/AM_mc_vs_dc_ae.jpg" border="0" alt="PayPal Acceptance Mark"></a></td></tr></table><!-- PayPal Logo -->
+          <!-- PayPal Logo --><table border="0" cellpadding="10" cellspacing="0" align="center"><tr><td align="center"></td></tr><tr><td align="center"><a href="https://www.paypal.com/webapps/mpp/paypal-popup" title="How PayPal Works" onclick="javascript:window.open('https://www.paypal.com/webapps/mpp/paypal-popup','WIPaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1060, height=700'); return false;"><img src="https://www.paypalobjects.com/webstatic/mktg/logo/AM_mc_vs_dc_ae.jpg" border="0" alt="PayPal Acceptance Mark"></a></td></tr></table><!-- PayPal Logo -->
         </ion-card-content>
       </ion-card>
     </div>
@@ -71,12 +76,12 @@
             <ion-item>
               <ion-label stacked>Amount</ion-label>
               <ion-input
-                      type="number"
-                      placeholder="0.00"
-                      step="0.01"
-                      required
-                      name="amount"
-                      [(ngModel)]="withdrawMoney.amount"
+                type="number"
+                placeholder="0.00"
+                step="0.01"
+                required
+                name="amount"
+                [(ngModel)]="withdrawMoney.amount"
               ></ion-input>
             </ion-item>
 
@@ -96,11 +101,11 @@
           <ion-card-content>
             <ion-label stacked>Paypal Email Address</ion-label>
             <ion-input
-                    type="email"
-                    placeholder="example@example.com"
-                    required
-                    name="email"
-                    [(ngModel)]="withdrawMoney.email"
+              type="email"
+              placeholder="example@example.com"
+              required
+              name="email"
+              [(ngModel)]="withdrawMoney.email"
             ></ion-input>
           </ion-card-content>
         </ion-card>
