--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -10,7 +10,7 @@
   <ion-list>
     <ion-item *ngFor="let contact of contacts">
       <h2>{{contact.name}}</h2>
-      <p>({{contact.phone_number.slice(0, 3)}}) {{contact.phone_number.slice(3, 6)}}-{{contact.phone_number.slice(6, 10)}}</p>
+      <p>{{contact.phone_number | phone}}</p>
     </ion-item>
   </ion-list>
 </ion-content>
