Refactored and added comments.

--- a/src/pages/manage/manage.html
+++ b/src/pages/manage/manage.html
@@ -17,7 +17,7 @@
   <div padding>
     <ion-segment [(ngModel)]="action">
       <ion-segment-button value="deposit" >
-        Add Money
+        Deposit
       </ion-segment-button>
       <ion-segment-button value="withdraw">
         Withdraw
