worked on modifying user info on server

--- a/src/pages/edit-account/edit-account.html
+++ b/src/pages/edit-account/edit-account.html
@@ -27,7 +27,7 @@
 
     <ion-item>
       <ion-label stacked>Phone Number</ion-label>
-      <ion-input type="tel" formControlName="phone"></ion-input>
+      <ion-input type="tel" formControlName="phone_number"></ion-input>
     </ion-item>
 
     <ion-item>
