--- a/src/pages/send-money/send-money.html
+++ b/src/pages/send-money/send-money.html
@@ -16,7 +16,7 @@
           <ion-label stacked>Amount</ion-label>
           <ion-input type="number" formControlName="amount" placeholder="0.00" step="0.01" min="0" [max]="maxAmount" (input)="updateValidAmount()"></ion-input>
         </ion-item>
-        <div *ngIf="!validAmount">You only have {{maxAmount}} {{maxCurrency}}!</div>
+        <p color="danger" *ngIf="!validAmount">You only have {{maxAmount}} {{maxCurrency}}!</p>
 
         <ion-item>
           <ion-label stacked>Select Currency</ion-label>
