--- a/src/pages/OTP/otp.html
+++ b/src/pages/OTP/otp.html
@@ -1,53 +1,34 @@
-<ion-content padding [fullscreen]="true"
-             style="background: url('assets/images/login-background.jpg') no-repeat center; background-size: cover">
-    <div class="logo">
-        <ion-img src="assets/images/logo.png" [width]="160" [height]="85"></ion-img>
+
+<ion-content padding>
+  <div class="vertical-container">
+    <div class="vertical-align">
+      <div *ngIf="showRequest">
+        <form [formGroup]="request">
+          <h2>Please enter your phone number.</h2>
+          <p>Including the international number digit(s).</p>
+          <input type="number" formControlName="phone_number">
+          <span *ngIf="request.get('phone_number').invalid && request.get('phone_number').dirty">
+            Please enter a phone number.
+          </span>
+        </form>
+
+        <button (click)="requestCode()" [disabled]="loading || request.invalid">Send code.</button>
+
+        <a (click)="showRequest = !showRequest">Already have a code?</a>
+      </div>
+      <div *ngIf="!showRequest">
+        <form [formGroup]="unlock">
+          <h2>Please enter the code.</h2>
+          <input type="number" formControlName="token">
+          <span *ngIf="unlock.get('token').invalid && unlock.get('token').dirty">
+            Please enter a four digit token.
+          </span>
+        </form>
+
+        <button (click)="unlockAccount()" [disabled]="loading || unlock.invalid">Submit</button>
+
+        <a (click)="showRequest = !showRequest">Don't have a code?</a>
+      </div>
     </div>
-    <!--<form (onSubmit)="login(form)" #form="ngForm">-->
-    <!--<div class="input-group">-->
-    <!--<ion-icon name="person"></ion-icon>-->
-    <!--<ion-input-->
-    <!--type="email"-->
-    <!--placeholder="Email"-->
-    <!--required-->
-    <!--&gt;</ion-input>-->
-    <!--</div>-->
-    <!--<div class="input-group">-->
-    <!--<ion-icon name="lock"></ion-icon>-->
-    <!--<ion-input-->
-    <!--type="text"-->
-    <!--placeholder="Password"-->
-    <!--&gt;</ion-input>-->
-    <!--</div>-->
-    <!--<button ion-button block type="submit">Sign In</button>-->
-    <!--</form>-->
-    <!--<div class="seperator">-->
-    <!--or sign in with-->
-    <!--</div>-->
-    <ion-item *ngIf="hideCodeinput">
-        <ion-label>Enter a phone number here</ion-label>
-        <ion-input [(ngModel)]="phoneNumber" placeholder="1-111-111-1111" type="tel" value=""></ion-input>
-    </ion-item>
-    <button *ngIf="hideCodeinput" class="btn-signin" ion-button block icon-left (click)="submitOTP(phonenumber)">
-        Submit Phone Number
-    </button>
-    <button *ngIf="hideCodeinput" class="btn-signin" ion-button block icon-left (click)="returnToLogin()">
-        Back
-    </button>
-    <ion-item *ngIf="!hideCodeinput">
-        <ion-label fixed>Please enter your Validation Code</ion-label>
-        <ion-input [(ngModel)]="codeNumber" placeholder="123456" type="number" value="">
-        </ion-input>
-    </ion-item>
-    <ion-card warning>
-        <ion-card-content *ngIf="invalidCode">
-            <div class=".text-error">Invalid Code! Please Try again.</div>
-        </ion-card-content>
-    </ion-card>
-    <button *ngIf="!hideCodeinput" class="btn-signin" ion-button block icon-left (click)="returnToPhoneEntry()">
-        Back
-    </button>
-    <button *ngIf="!hideCodeinput" class="btn-signin" ion-button block icon-left (click)="submitOTPCode(codeNumber)">
-        Submit Code
-    </button>
+  </div>
 </ion-content>
