--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -10,7 +10,7 @@
   <ion-list>
     <ion-item *ngFor="let contact of contacts">
       <h2>{{contact.name}}</h2>
-      <p>{{contact.phone_number | phone}}</p>
+      <p>{{contact.phone_number}}</p>
     </ion-item>
   </ion-list>
 </ion-content>
