--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -8,7 +8,7 @@
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let contact of contacts" (click)="showContactModal()">
+    <ion-item *ngFor="let contact of contacts" (click)="showContactModal(contact)">
       <h2>{{contact.name}}</h2>
       <p>{{contact.phone_number | phone}}</p>
     </ion-item>
