--- a/src/pages/modals/contact-modals/contact-modal.html
+++ b/src/pages/modals/contact-modals/contact-modal.html
@@ -17,7 +17,8 @@
     <ion-list>
         <ion-item>
             <h2>{{contact.name}}</h2>
-            <p>{{contact.phone_number}}</p>
+            <p>Phone number: {{contact.phone_number}}</p>
+            <p>Email: {{contact.email}}</p>
         </ion-item>
     </ion-list>
 </ion-content>
