--- a/src/pages/modals/contact-modals/contact-modal.html
+++ b/src/pages/modals/contact-modals/contact-modal.html
@@ -17,7 +17,7 @@
     <ion-list>
         <ion-item>
             <h2>{{contact.name}}</h2>
-            <p>Phone number: {{contact.phone_number}}</p>
+            <p>Phone: {{contact.phone_number}}</p>
             <p>Email: {{contact.email}}</p>
         </ion-item>
     </ion-list>
