Add contact can now be done from send page.

--- a/src/pages/send-money/send-money.html
+++ b/src/pages/send-money/send-money.html
@@ -29,13 +29,15 @@
 
         <ion-item>
           <ion-label stacked>Select Receiver</ion-label>
-          <ion-select formControlName="receiver">
+          <ion-select formControlName="receiver" (ionChange)="createContact()">
             <ion-option value="add">Add New contact</ion-option>
             <ion-option *ngFor="let contact of contacts" [value]="contact" >
               {{ contact.name }}
             </ion-option>
           </ion-select>
+
         </ion-item>
+
       </ion-card-content>
     </ion-card>
 
