EP-14 EP-120 #start-review Created search functionality on contacts page.

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -7,6 +7,11 @@
 </ion-header>
 
 <ion-content>
+  <ion-searchbar
+    (ionInput)="filterContacts ($event)"
+  >
+  </ion-searchbar>
+
   <ion-item>
     <div text-center>
       <button ion-button full color="primary" (click)="showAddContactModal()">Create new contact</button>
