Fixed deprecation issue on send-money page as well as transfers-modal and transfers pages.

--- a/src/pages/transfers/transfers.html
+++ b/src/pages/transfers/transfers.html
@@ -32,24 +32,24 @@
 
     <ion-list *ngSwitchCase="'history'">
         <ion-item-group>
-          <ion-item-divider color="light">January 09, 2016</ion-item-divider>
+          <ion-item-divider ion-text color="light">January 09, 2016</ion-item-divider>
           <ion-item>
             <ion-avatar item-left>
               <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
             </ion-avatar>
             <h2>FName LName</h2>
-            <p item-right color="in">+7.30$</p>
+            <p ion-text item-right color="in">+7.30$</p>
           </ion-item>
         </ion-item-group>
 
       <ion-item-group>
-        <ion-item-divider color="light">January 4, 2016</ion-item-divider>
+        <ion-item-divider ion-text color="light">January 4, 2016</ion-item-divider>
         <ion-item>
           <ion-avatar item-left>
             <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
           </ion-avatar>
           <h2>FName LName</h2>
-          <p item-right color="out">-5.45$</p>
+          <p ion-text item-right color="out">-5.45$</p>
         </ion-item>
 
         <ion-item>
@@ -57,7 +57,7 @@
             <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
           </ion-avatar>
           <h2>FName LName</h2>
-          <p item-right color="in">+8.75$</p>
+          <p ion-text item-right color="in">+8.75$</p>
         </ion-item>
       </ion-item-group>
     </ion-list>
