--- a/src/pages/modals/transfers-modal/transfers-modal.html
+++ b/src/pages/modals/transfers-modal/transfers-modal.html
@@ -26,7 +26,7 @@
               <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
             </ion-avatar>
             <h2>FName LName</h2>
-            <p item-right color="in">+10.45$</p>
+            <p ion-text item-right color="in">+10.45$</p>
           </ion-item>
         <p>Message: </p>
         <ion-item>
