added delete account button

--- a/src/pages/edit-account/edit-account.html
+++ b/src/pages/edit-account/edit-account.html
@@ -47,4 +47,5 @@
 
     <button ion-button full [disabled]="!updateAccount.valid">Update Info</button>
   </form>
+  <button ion-button color="danger" full (click)='deleteUser()'>Delete Account</button>
 </ion-content>
