--- a/src/pages/modals/transfers-modal/transfers-modal.html
+++ b/src/pages/modals/transfers-modal/transfers-modal.html
@@ -20,12 +20,12 @@
     </ion-card-header>
     <ion-card-content>
       <ion-list>
-        <p>From: </p>
+        <p>To: </p>
           <ion-item>
             <ion-avatar item-left>
               <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
             </ion-avatar>
-            <h2>{{transfer.sender}}</h2>
+            <h2>{{transfer.receiver.name}}</h2>
             <p ion-text item-right color="out">-{{transfer.amount}} OUT</p>
           </ion-item>
         <p>Message: </p>
