EP-63 EP-67 EP-15 EP-61 #comment Fixed error where tabs where not being displayed on deep link. This is a large commit because a lot of chaning had to be done before it actually worked. I didn't want to commit broken code.

--- a/src/pages/transfers/transfers.html
+++ b/src/pages/transfers/transfers.html
@@ -21,7 +21,7 @@
 
   <div [ngSwitch]="action">
     <ion-list *ngSwitchCase="'pending'">
-      <ion-item *ngFor="let transfer of transfers" (click)="showAcceptDeclineModal(transfer)">
+      <ion-item *ngFor="let transfer of pendingTransfers" (click)="showAcceptDeclineModal(transfer)">
         <ion-avatar item-left>
           <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
         </ion-avatar>
