--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+<ion-tabs #myTabs>
+  <ion-tab [root]="tab1Root" [rootParams] = "transferParams" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Manage" tabIcon="cash"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Send" tabIcon="send"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Transfers" tabIcon="filing"></ion-tab>
+  <ion-tab [root]="tab4Root" [rootParams] = "transferParams" tabTitle="Transfers" tabIcon="filing"></ion-tab>
   <ion-tab [root]="tab5Root" tabTitle="More" tabIcon="menu"></ion-tab>
 </ion-tabs>
