Pending to outgoing

--- a/src/pages/transfers/transfers.html
+++ b/src/pages/transfers/transfers.html
@@ -14,7 +14,7 @@
         History
       </ion-segment-button>
       <ion-segment-button value="pending">
-        Pending
+        Outgoing
       </ion-segment-button>
     </ion-segment>
   </div>
