EP-61 #comment Completed service for decline as well as implemented call to server to cancel transaction.

--- a/src/pages/modals/acceptdecline-modal/acceptdecline-modal.html
+++ b/src/pages/modals/acceptdecline-modal/acceptdecline-modal.html
@@ -13,10 +13,17 @@
 </ion-header>
 
 <ion-content padding>
+  <h2>From</h2>
+  <p>{{transfer.sender}}</p>
+  <h2>Amount</h2>
+  <p>{{transfer.amount}}</p>
 
-  <div>{{transfer.message}}</div>
-    <button ion-button (click)="accept()">Accept</button>
-    <button ion-button (click)="decline()">Decline</button>
+  <h2>Message</h2>
+  <p>{{transfer.message}}</p>
+
+  <div><i>Sent at {{transfer.created_at}}</i></div>
+  <button ion-button color="primary" (click)="accept()">Accept</button>
+  <button ion-button color="danger" (click)="decline()">Decline</button>
 
 </ion-content>
 
