Decline transaction w/ accept fix (#85)
* EP-61 #comment Completed service for decline as well as implemented call to server to cancel transaction.

* Subscribed to walletSrv so app waits for wallet to be updated before continuing. Also changed html to add spacing.

* Small formating changes to fix issues brought up in pull request.

--- a/src/pages/modals/acceptdecline-modal/acceptdecline-modal.html
+++ b/src/pages/modals/acceptdecline-modal/acceptdecline-modal.html
@@ -13,10 +13,23 @@
 </ion-header>
 
 <ion-content padding>
+  <h4>From</h4>
+  <p>{{transfer.sender}}</p>
 
-  <div>{{transfer.message}}</div>
-    <button ion-button (click)="accept()">Accept</button>
-    <button ion-button (click)="decline()">Decline</button>
+  <h4>Amount</h4>
+  <p>{{transfer.amount}}</p>
+
+  <h4>Message</h4>
+  <p>{{transfer.message}}</p>
+
+  <br>
+  <br>
+
+  <div><i>Sent at {{transfer.created_at | date:'medium'  }}</i></div>
+
+  <br>
+  <button ion-button color="primary" (click)="accept()">Accept</button>
+  <button ion-button color="danger" (click)="decline()">Decline</button>
 
 </ion-content>
 
